# MatrixOperations

./: CMakeLists.txt  README.md
src/: Renderer.cpp  main.cpp
src/GameObjects/: ChildObject.h  ParentObject.h
src/Headers/: LocalToWorldPosition.h  Matrix.h  Renderer.h  TranslateAndRotate.h
